# fastapi-boilerplate

./: .env.ci  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  dockerfile  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/api/dependencies/: database.py
app/api/routes/: __init__.py  example_router.py
app/core/: config.py
app/database/: exceptions.py  session.py
app/database/repositories/: base.py  examples.py
app/database/tables/: __init__.py  examples.py
app/models/schemas/: example.py
migrations/: env.py
migrations/versions/: f0feb00d723a_initial_generation.py
tests/: conftest.py  test_main.py
